@@ -1,3 +1,10 @@
+2013-10-22  Bill Schmidt  <wschmidt@vnet.ibm.com>
+
+	* gcc.target/powerpc/altivec-perm-1.c: Move the two vector pack
+	tests into...
+	* gcc.target/powerpc/altivec-perm-3.c: ...this new test, which is
+	restricted to big-endian targets.
+
 2013-10-22  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran 57893
